--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     {{#if images.0.url}}
     <img class="profileimg-button" src="{{images.0.url}}" />
     {{else}}
-    <img src="style/user.png" class="profileimg-button"/>
+    <img src="style/user.PNG" class="profileimg-button"/>
     {{/if}}
     <!-- This is getting the user's name --> 
     <div class='name-button'>{{display_name}}</div>
@@ -305,7 +305,7 @@
         {{#if images.0.url}}
         <img class="profileimg" src="{{images.0.url}}" />
         {{else}}
-        <img src="style/user.png" class="profileimg"/>
+        <img src="style/user.PNG" class="profileimg"/>
         {{/if}}
       </div>
       <div class='user-info'>
