--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="top-container">
         <header class="topnav">
           <div class='go-live'>
-            <img id='disc-p' src='style/disc-purple.png' onclick='offline()' onmouseover="liveHover(this);" onmouseout="liveUnhover(this);">
+            <img id='disc-p' src='style/user.png' onclick='offline()' onmouseover="liveHover(this);" onmouseout="liveUnhover(this);">
             <img id='disc' src='style/disc.png' onclick='live()' onmouseover="offlineHover(this);" onmouseout="offlineUnhover(this);">
           </div>
           <div class='private'>
