--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="top-container">
         <header class="topnav">
           <div class='go-live'>
-            <img id='disc-p' src='style/user.png' onclick='offline()' onmouseover="liveHover(this);" onmouseout="liveUnhover(this);">
+            <img id='disc-p' src='style/disc-purple.png' onclick='offline()' onmouseover="liveHover(this);" onmouseout="liveUnhover(this);">
             <img id='disc' src='style/disc.png' onclick='live()' onmouseover="offlineHover(this);" onmouseout="offlineUnhover(this);">
           </div>
           <div class='private'>
@@ -215,61 +215,61 @@
             <h2 class='following-dj-title'>Following DJ</h2>
             <div id='following-dj'>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Bob Bob</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='offline-status'>Offline</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>John John</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='live-status'>Live</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Tom Tom</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='live-status'>Live</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Joe Joe</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='offline-status'>Offline</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Poe Poe</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='live-status'>Live</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Jane Jane</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='offline-status'>Offline</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Kim Kim</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='live-status'>Live</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Jan Jan</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='live-status'>Live</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Tam Tam</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='offline-status'>Offline</div></div>
               </div>
               <div class='follow-dj-grid'> 
-                <img src='style/user.png' class="djimg">
+                <img src='style/logo/user.png' class="djimg">
                 <div class='follow-dj-name'>Ari Ari</div>
                 <div class='dj-np'>Now Playing: [Song]</div>
                 <div class='dj-stat'>Status: <div class='live-status'>Live</div></div>
@@ -293,7 +293,7 @@
     {{#if images.0.url}}
     <img class="profileimg-button" src="{{images.0.url}}" />
     {{else}}
-    <img src='style/user.png' class="profileimg-button">
+    <img src='style/logo/user.png' class="profileimg-button">
     {{/if}}
     <!-- This is getting the user's name --> 
     <div class='name-button'>{{display_name}}</div>
@@ -305,7 +305,7 @@
         {{#if images.0.url}}
         <img class="profileimg" src="{{images.0.url}}" />
         {{else}}
-        <img src='style/user.png' class="profileimg">
+        <img src='style/logo/user.png' class="profileimg">
         {{/if}}
       </div>
       <div class='user-info'>
