Added Discover stuff

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <!-- Ethan's workspace ends here-->
         </section>
         <section id='discover-content'>
+          <h2 class='rec-play-title'>Most Popular DJs</h2>
         <div class='twitter-feed'>
           <div class='feed1'>
             <a class="twitter-timeline" data-height="500" data-theme="dark" href="https://twitter.com/Adele">Tweets by Adele</a> 
@@ -146,6 +147,30 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
+        <div class='following-dj-grid'>
+          <h2 class='following-dj-title'>Discover New DJs</h2>
+          <div id='following-dj'>
+            <div class='follow-dj-grid'> 
+              <img src='style/logo/user.png' class="djimg">
+              <div class='discover-dj-name'>Bob Bob</div>
+            </div>
+            <div class='follow-dj-grid'> 
+              <img src='style/logo/user.png' class="djimg">
+              <div class='discover-dj-name'>John John</div>
+            </div>
+            <div class='follow-dj-grid'> 
+              <img src='style/logo/user.png' class="djimg">
+              <div class='discover-dj-name'>Tom Tom</div>
+            </div>
+            <div class='follow-dj-grid'> 
+              <img src='style/logo/user.png' class="djimg">
+              <div class='discover-dj-name'>Joe Joe</div>
+            </div>
+            <div class='follow-dj-grid'> 
+              <img src='style/logo/user.png' class="djimg">
+              <div class='discover-dj-name'>Poe Poe</div>
+            </div>
+          </div>
         <div class='new-rel-grid'>
           <h2 class='new-rel-title'>New Releases</h2>
           <div id='new-releases'></div>
