--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <h1>Jasmine Nguyen</h1>
             <div id="c1"></div>
          </div>
+         <div class="scrollDown">
+            <p class="scrollText">Scroll Down</p>
+            <div class="scrollLine"></div>
+         </div>
       </section>
       <section id="about">
          <div class="sidebar">
@@ -37,31 +41,35 @@
             <div class="bot"></div>
          </div>
          <div class="aboutbox">
-            <div id="c2"></div>
-            <div class="biobox">
-               <p class="bio">I am currently pursing a Bachelor's Degree in Computer Science with a Software Engineering Concentration at Louisiana State University and graduate in May 2022. My plans after graduation is to move to Austin, Texas and search for a job in web design/development.</p>
-            </div>
             <div class="contact">
+               <div id="c2"></div>
                <p>jasminenhi3@gmail.com</p>
                <p><a class="works" href="https://github.com/yumichiya">GitHub</a></p>
                <p><a class="works" href="https://www.linkedin.com/in/jasmine-nguyen-3a19b1151/">LinkedIn</a></p>
             </div>
-            <div class="experience">
-               <h3 hidden class="exp">Experience</h3>
-               <div class="timeline">
+            <div class="eduexp">
+               <div class="line">
+                  <h3 class="edu">Education</h3>
+                  <div class="edu1">
+                     <h4 class="school">Louisiana State University</h3>
+                     <p class="major">B.S. in Computer Science</h4>
+                     <p class="con">Concentration: Software Engineering</p>
+                  </div>
+                  <div id="c3"></div>
+                  <h3 class="exp">Experience</h3>
                   <div class="exp1">
-                     <h3 class="company">Greater Baton Rouge Learning Disabilities Coalition</h3>
-                     <h4 class="title">Web Developer & Graphic Designer</h4>
+                     <h4 class="company">Greater Baton Rouge Learning Disabilities Coalition</h3>
+                     <p class="title">Web Developer & Graphic Designer</h4>
                      <p class="date">October 2016 - April 2022 / Baton Rouge, LA</p>
                   </div>
                   <div class="exp2">
                      <h3 class="company">School Times</h3>
-                     <h4 class="title">Salesperson</h4>
+                     <p class="title">Sales Associate</h4>
                      <p class="date">June - August 2017; June - August 2018; July 2019 / Baton Rouge, LA</p>
                   </div>
                   <div class="exp3">
                      <h3 class="company">Louisiana State University ITS</h3>
-                     <h4 class="title">Student Web Administrator</h4>
+                     <p class="title">Student Web Administrator</h4>
                      <p class="date">July 2019 - Present / Baton Rouge, LA</p>
                   </div>
                </div>
