--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
          <div class="wMain">
             <div class="works1">
                <h3 class="wTitle">
-                  <a class="link" href="ldhelp.org">LDHelp.org</a>
+                  <a class="link" href="https://ldhelp.org/" target="_blank">LDHelp.org</a>
                </h3>
                <br>
                <p class="dev">WordPress</p>
@@ -93,7 +93,7 @@
             </div>
             <div class="works2">
                <h3 class="wTitle">
-                  <a class="link" href="https://github.com/yumichiya/avalanche">Avalanche</a>
+                  <a class="link" href="https://github.com/yumichiya/avalanche" target="_blank">Avalanche</a>
                </h3>
                <br>
                <p class="dev">CSS</p>
@@ -104,7 +104,7 @@
             </div>
             <div class="works3">
                <h3 class="wTitle">
-                  <a class="link" href="https://github.com/yumichiya/courseplanner">Course Planner</a>
+                  <a class="link" href="https://github.com/yumichiya/courseplanner" target="_blank">Course Planner</a>
                </h3>
                <br>
                <p class="dev">Apache</p>
@@ -118,7 +118,7 @@
             </div>
             <div class="works4">
                <h3 class="wTitle">
-                  <a class="link" href="https://github.com/yumichiya/yumichiya.github.io/tree/master/CSC2463">Digital Media Course</a>
+                  <a class="link" href="https://github.com/yumichiya/yumichiya.github.io/tree/master/CSC2463" target="_blank">Digital Media Course</a>
                </h3>
                <br>
                <p class="dev">Arduino</p>
